# boatswain-kauri

./: .eslintrc.js  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.mts  vite.config.ts
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: twx.ts
src/providers/: index.tsx
src/screens/: app.tsx
